feat(liaoxuefeng): 增加模块化相关练习